<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/armata"
        android:text="@string/app_welcome_text"
        android:textColor="@color/custom_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="670dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/museum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <TextView
            android:id="@+id/myNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/my_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/custom_white"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/round_corners"
            android:contentDescription="@string/go_next_activity"
            android:forceDarkAllowed="true"
            android:onClick="goToPaintings"
            app:srcCompat="@drawable/start_40px" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>