<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PersonalChoiceActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/halant_light"
        android:text="@string/choice_welcome_question"
        android:textColor="@color/custom_white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/custom_white"
        app:layout_constraintBottom_toTopOf="@+id/choiceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias=" 0.15" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/choiceButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background_standard"
        android:text="@string/save_preference"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ShowChoiceButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_standard"
        android:onClick="displayPreference"
        android:text="@string/show_preference"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceButton"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/showPreferenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_preference"
        android:textColor="@color/custom_yellow"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShowChoiceButton"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>